--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
   "name": "Transfer Images between Instances",
   "type": "app",
   "version": "2.0.0",
-  "categories": ["images", "data operations"],
+  "categories": ["images", "data operations", "annotation transformation"],
   "description": "Transfer and filter images between Supervisely instances",
   "docker_image": "supervisely/base-py-sdk:6.70.13",
   "entrypoint": "python -m uvicorn src.main:app --host 0.0.0.0 --port 8000",
