Added error report for default settings.

--- a/local.env
+++ b/local.env
@@ -4,4 +4,4 @@ TEAM_ID = 448
 # PROJECT_ID = 17761
 # DATASET_ID = 59621
 # SLY_APP_DATA_DIR = "/home/iwatkot/tmp/data"
-context.slyFile = "/target/target_dev.env"
+context.slyFile = "/.env/target.env"
